Add site.yml and add a default html page in files folder

--- a/site.yml
+++ b/site.yml
@@ -9,4 +9,12 @@
         - "{{ php_package }}"
       state: latest
       update_cache: true
-
+  
+  - name: Copy default html file for site
+    tags: apache, apache2, httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
